feat(ui-reports): Add legend

--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -65,6 +65,11 @@
     </table>
   </div>
 
+  <p class="order-reports__legend p5">
+    <span class="order-grid__legend order-grid__legend--unordered"></span> - Unordered
+
+    <span class="order-grid__legend order-grid__legend--ordered"></span> - Ordered
+  </p>
 
   <p class="order-reports__disclaimer p7">
     <b>Attention</b> - any order is considered to be committed if at least one dish was ordered in the menu
