--- a/src/app/container/header/header.component.html
+++ b/src/app/container/header/header.component.html
@@ -39,7 +39,7 @@
       <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
         <a href="..." clrDropdownItem>About</a>
         <a routerLink="/profile" routerLinkActive="active" clrDropdownItem>Preferences</a>
-        <a href="#" clrDropdownItem (click)="logout.emit()">Log out</a>
+        <a href="#" clrDropdownItem (click)="onLogoutClick($event)">Log out</a>
       </clr-dropdown-menu>
     </clr-dropdown>
   </div>
