fix(settings): Finish Settings UI

--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -14,7 +14,7 @@
         Users
       </a>
       <a routerLink="/management/system" routerLinkActive="active" class="nav-link">
-        System Settings
+        System
       </a>
     </section>
   </nav>
