--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'styles/anim';
 @import 'styles/poster';
+@import 'styles/mobile';
 
 .text-link {
   color: #007cbb;
