Mobile UI Fixes

--- a/src/app/container/today/today.component.html
+++ b/src/app/container/today/today.component.html
@@ -1,6 +1,6 @@
 <div class="today-header" [ngClass]="{'pos-a': !isLoaded || orderEmpty}">
   <h1 style="margin-top: 0">Food order for today</h1>
-  <h6>Today is {{displayedDate}}</h6>
+  <h6 class="today-header__date">Today is {{displayedDate}}</h6>
 </div>
 
 <!-- Dish menu items preloader -->
