misc: add URL patcher for remote API

--- a/src/app/container/order-editor/order-editor.component.html
+++ b/src/app/container/order-editor/order-editor.component.html
@@ -148,7 +148,7 @@
                   [label]="item.label"
                   [description]="item.description"
                   [category]="getDishCategory(item.type)"
-                  [imageUrl]="item.photoUrl"
+                  [imageUrl]="patchUrl(item.photoUrl)"
                   [rateable]="false"
                   [editable]="false"
                   [selectable]="orderEditable"
