--- a/src/app/management/items-catalog/items-catalog.component.html
+++ b/src/app/management/items-catalog/items-catalog.component.html
@@ -89,7 +89,7 @@
       [label]="item.label"
       [description]="item.description"
       [category]="getDishCategory(item.type)"
-      [imageUrl]="item.photoUrl"
+      [imageUrl]="patchUrl(item.photoUrl)"
       [rateable]="false"
       [editable]="true"
       [selectable]="true"
