--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import 'styles/anim';
 @import 'styles/poster';
 @import 'styles/mobile';
+@import 'styles/common';
 
 .text-link {
   color: #007cbb;
