--- a/src/app/container/order-editor/order-editor.component.scss
+++ b/src/app/container/order-editor/order-editor.component.scss
@@ -3,16 +3,22 @@
   flex-direction: column;
   height: 100%;
   margin-top: -24px;
+  overflow-y: auto;
 }
 
 .order-editor {
   cursor: default !important;
   min-height: 90%;
+  overflow-y: auto;
 }
+
 .order-editor__header {
   display: block;
-  position: sticky;
-  top: -24px;
+  // position: sticky;
+  // top: -24px;
+  position: absolute;
+  width: 100%;
+  -webkit-backdrop-filter: blur(5px);
   background: #fafafaef;
   padding: 24px 0;
   z-index: 1;
@@ -21,7 +27,7 @@
 .order-editor__container {
   flex: 1;
   //padding-top: 24px;
-  position: relative;
+  // position: relative;
 }
 
 .order-editor__section:first-child .order-editor__section__title {
