--- a/src/app/container/order-editor/order-editor.component.scss
+++ b/src/app/container/order-editor/order-editor.component.scss
@@ -17,11 +17,12 @@
   // position: sticky;
   // top: -24px;
   position: absolute;
-  width: 100%;
   -webkit-backdrop-filter: blur(5px);
   background: #fafafaef;
   padding: 24px 0;
   z-index: 1;
+  left: 0;
+  right: 0;
 }
 
 .order-editor__container {
