--- a/src/app/container/order-editor/order-editor.component.scss
+++ b/src/app/container/order-editor/order-editor.component.scss
@@ -2,8 +2,12 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-top: -24px;
   overflow-y: auto;
+
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .order-editor {
@@ -12,10 +16,12 @@
   overflow-y: auto;
 }
 
+.order-editor__section__title {
+  padding: 0 15px;
+}
+
 .order-editor__header {
   display: block;
-  // position: sticky;
-  // top: -24px;
   position: absolute;
   -webkit-backdrop-filter: blur(5px);
   background: #fafafaef;
@@ -25,10 +31,12 @@
   right: 0;
 }
 
+.order-editor__btn--nav {
+  min-width: 0;
+}
+
 .order-editor__container {
   flex: 1;
-  //padding-top: 24px;
-  // position: relative;
 }
 
 .order-editor__section:first-child .order-editor__section__title {
@@ -38,6 +46,14 @@
 .order-editor__no-items {
   padding: 64px;
   text-align: center;
+}
+
+// Desktop-specific styles
+@media (min-width: 800px) {
+  .order-editor {
+    padding-top: 96px;
+    padding-bottom: 24px;
+  }
 }
 
 // mobile styles
