fix: set container padding

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -7,3 +7,11 @@
 .main-container .content-container .content-area {
   padding: 0;
 }
+
+.content-padded {
+  padding: 24px;
+}
+
+.content-padded__aside {
+  padding: 0 24px;
+}
