--- a/src/app/container/today/today.component.html
+++ b/src/app/container/today/today.component.html
@@ -1,44 +1,46 @@
-<div class="today-header" [ngClass]="{'pos-a': !isLoaded || orderEmpty}">
-  <h1 style="margin-top: 0">Food order for today</h1>
-  <h6 class="today-header__date">Today is {{displayedDate}}</h6>
-</div>
+<div class="content-padded" style="height: 100%">
+  <div class="today-header" [ngClass]="{'pos-a': !isLoaded || orderEmpty}">
+    <h1 style="margin-top: 0">Food order for today</h1>
+    <h6 class="today-header__date">Today is {{displayedDate}}</h6>
+  </div>
 
-<!-- Dish menu items preloader -->
-<app-spinner *ngIf="isLoading" style="height: 100%"></app-spinner>
+  <!-- Dish menu items preloader -->
+  <app-spinner *ngIf="isLoading" style="height: 100%"></app-spinner>
 
-<!-- error message -->
-<app-poster
-  *ngIf="isFailed"
-  class="poster--error"
-  icon="bug"
-  label="Failed to get order information"
->
-  <code class="poster__error">{{error}}</code>
-  <a href="#" (click)="fetchOrder()">Try again</a>
-</app-poster>
+  <!-- error message -->
+  <app-poster
+    *ngIf="isFailed"
+    class="poster--error"
+    icon="bug"
+    label="Failed to get order information"
+  >
+    <code class="poster__error">{{error}}</code>
+    <a href="#" (click)="fetchOrder()">Try again</a>
+  </app-poster>
 
-<!-- empty order list message -->
-<app-poster
-  *ngIf="isLoaded && orderEmpty"
-  icon="wand"
-  label="Your order is empty"
->
-  You can manage your order in <a routerLink="/orders">orders</a> section.
-</app-poster>
+  <!-- empty order list message -->
+  <app-poster
+    *ngIf="isLoaded && orderEmpty"
+    icon="wand"
+    label="Your order is empty"
+  >
+    You can manage your order in <a routerLink="/orders">orders</a> section.
+  </app-poster>
 
-<div class="row" *ngIf="isLoaded && !orderEmpty">
+  <div class="row" *ngIf="isLoaded && !orderEmpty">
 
-  <div *ngFor="let dish of dishes" class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-    <app-food-card
-      [rating]="0"
-      [label]="dish.label"
-      [description]="dish.description"
-      [category]="getDishCategory(dish.type)"
-      [rateable]="false"
-      [editable]="false"
-      [selectable]="false"
-      [badgeColor]="getDishCategoryColor(dish.type)"
-      [imageUrl]="dish.photoUrl"
-    ></app-food-card>
+    <div *ngFor="let dish of dishes" class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+      <app-food-card
+        [rating]="0"
+        [label]="dish.label"
+        [description]="dish.description"
+        [category]="getDishCategory(dish.type)"
+        [rateable]="false"
+        [editable]="false"
+        [selectable]="false"
+        [badgeColor]="getDishCategoryColor(dish.type)"
+        [imageUrl]="dish.photoUrl"
+      ></app-food-card>
+    </div>
   </div>
 </div>
