--- a/src/app/management/users-manager/users-manager.component.html
+++ b/src/app/management/users-manager/users-manager.component.html
@@ -1,144 +1,145 @@
-<app-header-toolbar label="User management">
-  <button
-    type="button"
-    class="btn btn-danger"
-    *ngIf="checkedIds.length > 0"
-    [clrLoading]="deleteStatus.isLoading"
-    [disabled]="deleteStatus.isLoading"
-    (click)="deleteSelected()"
+<div class="content-padded">
+  <app-header-toolbar label="User management">
+    <button
+      type="button"
+      class="btn btn-danger"
+      *ngIf="checkedIds.length > 0"
+      [clrLoading]="deleteStatus.isLoading"
+      [disabled]="deleteStatus.isLoading"
+      (click)="deleteSelected()"
+    >
+      <clr-icon shape="trash"></clr-icon>
+      <span>Delete selected</span>
+    </button>
+
+    <button type="button" class="btn btn-success" (click)="openItemCreator()">
+      <clr-icon shape="plus"></clr-icon>
+      <span>Add new</span>
+    </button>
+  </app-header-toolbar>
+
+  <!-- data fetch error message -->
+  <app-poster
+    *ngIf="isFailed"
+    class="poster--error"
+    icon="bug"
+    label="Failed to get users list"
   >
-    <clr-icon shape="trash"></clr-icon>
-    <span>Delete selected</span>
-  </button>
+    <code class="poster__error">{{error}}</code>
+    <a href="#" (click)="fetchUsers()">Try again</a>
+  </app-poster>
 
-  <button type="button" class="btn btn-success" (click)="openItemCreator()">
-    <clr-icon shape="plus"></clr-icon>
-    <span>Add new</span>
-  </button>
-</app-header-toolbar>
+  <!-- Data fetch preloader -->
+  <app-spinner *ngIf="isLoading" style="height: 100%"></app-spinner>
 
-<!-- data fetch error message -->
-<app-poster
-  *ngIf="isFailed"
-  class="poster--error"
-  icon="bug"
-  label="Failed to get users list"
->
-  <code class="poster__error">{{error}}</code>
-  <a href="#" (click)="fetchUsers()">Try again</a>
-</app-poster>
+  <!-- Save success message -->
+  <app-alert
+    *ngIf="showSuccessMessage"
+    type="success"
+    icon="check-circle"
+    [dismissable]="false"
+  >
+    Changes have been saved successfully
+  </app-alert>
 
-<!-- Data fetch preloader -->
-<app-spinner *ngIf="isLoading" style="height: 100%"></app-spinner>
+  <!-- Delete success message -->
+  <app-alert
+    *ngIf="deleteStatus.isLoaded"
+    type="success"
+    icon="check-circle"
+    [dismissable]="false"
+  >
+    Items deleted successfully
+  </app-alert>
 
-<!-- Save success message -->
-<app-alert
-  *ngIf="showSuccessMessage"
-  type="success"
-  icon="check-circle"
-  [dismissable]="false"
->
-  Changes have been saved successfully
-</app-alert>
+  <!-- Delete error message -->
+  <app-alert
+    *ngIf="deleteStatus.isFailed"
+    type="danger"
+    icon="exclamation-circle"
+    [dismissable]="false"
+  >
+    Failed to delete items: {{this.deleteStatus.error}}
+  </app-alert>
 
-<!-- Delete success message -->
-<app-alert
-  *ngIf="deleteStatus.isLoaded"
-  type="success"
-  icon="check-circle"
-  [dismissable]="false"
->
-  Items deleted successfully
-</app-alert>
+  <!-- Users data grid -->
+  <div class="users-list" *ngIf="isLoaded">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>
+            <input type="checkbox" disabled />
+          </th>
+          <th>
+            Name
+          </th>
+          <th>
+            Email
+          </th>
+          <th>
+            Group
+          </th>
+          <th>
+            Actions
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users">
+          <td>
+            <input
+              type="checkbox"
+              [checked]="isUserChecked(user.id)"
+              (change)="toggleUserCheck(user.id)"
+              [disabled]="user.id == currentUserId"
+            />
+          </td>
 
-<!-- Delete error message -->
-<app-alert
-  *ngIf="deleteStatus.isFailed"
-  type="danger"
-  icon="exclamation-circle"
-  [dismissable]="false"
->
-  Failed to delete items: {{this.deleteStatus.error}}
-</app-alert>
+          <td>
+            <span class="text-link" (click)="editItem(user)">
+              {{user.firstName}} {{user.lastName}}
+            </span>
+          </td>
 
-<!-- Users data grid -->
-<div class="users-list" *ngIf="isLoaded">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>
-          <input type="checkbox" disabled />
-        </th>
-        <th>
-          Name
-        </th>
-        <th>
-          Email
-        </th>
-        <th>
-          Group
-        </th>
-        <th>
-          Actions
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>
-          <input
-            type="checkbox"
-            [checked]="isUserChecked(user.id)"
-            (change)="toggleUserCheck(user.id)"
-            [disabled]="user.id == currentUserId"
-          />
-        </td>
+          <td>
+            {{user.email}}
+          </td>
 
-        <td>
-          <span class="text-link" (click)="editItem(user)">
-            {{user.firstName}} {{user.lastName}}
-          </span>
-        </td>
-
-        <td>
-          {{user.email}}
-        </td>
-
-        <td>
-          {{getGroupName(user.level)}}
-        </td>
-        <td>
-          <a
-            [routerLink]="['/orders/', todayDate, user.id]"
-            target="_blank"
-          >
-            Edit orders
-          </a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<!-- Editor modal -->
-<clr-modal
-  clrModalSize="md"
-  [(clrModalOpen)]="showEditor"
-  [clrModalClosable]="!blockModal"
-  [clrModalStaticBackdrop]="!blockModal"
->
-  <h3 class="modal-title">
-    <span *ngIf="editorOperation == 0">Create a new</span><span *ngIf="editorOperation == 1">Edit the</span> user
-  </h3>
-  <div class="modal-body">
-    <app-user-editor
-      *ngIf="showEditor"
-      [enabled]="showEditor"
-      [user]="editableUser"
-      (success)="onEditFinish(true)"
-      (error)="onEditFinish(false)"
-      (loading)="onEditLoading()"
-    ></app-user-editor>
+          <td>
+            {{getGroupName(user.level)}}
+          </td>
+          <td>
+            <a
+              [routerLink]="['/orders/', todayDate, user.id]"
+              target="_blank"
+            >
+              Edit orders
+            </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-</clr-modal>
 
+  <!-- Editor modal -->
+  <clr-modal
+    clrModalSize="md"
+    [(clrModalOpen)]="showEditor"
+    [clrModalClosable]="!blockModal"
+    [clrModalStaticBackdrop]="!blockModal"
+  >
+    <h3 class="modal-title">
+      <span *ngIf="editorOperation == 0">Create a new</span><span *ngIf="editorOperation == 1">Edit the</span> user
+    </h3>
+    <div class="modal-body">
+      <app-user-editor
+        *ngIf="showEditor"
+        [enabled]="showEditor"
+        [user]="editableUser"
+        (success)="onEditFinish(true)"
+        (error)="onEditFinish(false)"
+        (loading)="onEditLoading()"
+      ></app-user-editor>
+    </div>
+  </clr-modal>
+</div>
