fix: add URL patcher

--- a/src/app/container/today/today.component.html
+++ b/src/app/container/today/today.component.html
@@ -39,7 +39,7 @@
         [editable]="false"
         [selectable]="false"
         [badgeColor]="getDishCategoryColor(dish.type)"
-        [imageUrl]="dish.photoUrl"
+        [imageUrl]="patchUrl(dish.photoUrl)"
       ></app-food-card>
     </div>
   </div>
