fix: hide ratings

--- a/src/app/container/order-editor/order-editor.component.html
+++ b/src/app/container/order-editor/order-editor.component.html
@@ -151,6 +151,7 @@
                   [imageUrl]="patchUrl(item.photoUrl)"
                   [rateable]="false"
                   [editable]="false"
+                   [showRatings]="false"
                   [selectable]="orderEditable"
                   [selected]="selectedClassItems[item.type] === item.id"
                   [badgeColor]="getDishCategoryColor(item.type)"
