--- a/src/app/container/today/today.component.html
+++ b/src/app/container/today/today.component.html
@@ -37,6 +37,7 @@
         [category]="getDishCategory(dish.type)"
         [rateable]="false"
         [editable]="false"
+        [showRatings]="false"
         [selectable]="false"
         [badgeColor]="getDishCategoryColor(dish.type)"
         [imageUrl]="patchUrl(dish.photoUrl)"
