fix: menu editor ui

--- a/src/app/management/menu-editor/menu-editor.component.html
+++ b/src/app/management/menu-editor/menu-editor.component.html
@@ -1,6 +1,6 @@
 <div class="content-padded__aside" style="height: 100%">
   <!-- Container -->
-  <div class="row" style="flex: 1">
+  <div class="row" style="flex: 1; height: 100%;">
     <div class="menu-editor__container flex">
       <!-- Page header -->
       <div class="menu-editor__header">
