fix: items catalog preloader

--- a/src/app/management/items-catalog/items-catalog.component.html
+++ b/src/app/management/items-catalog/items-catalog.component.html
@@ -114,7 +114,7 @@
 
 
   <!-- Items preloader -->
-  <app-spinner *ngIf="isLoading && resetDone"></app-spinner>
+  <app-spinner *ngIf="isLoading && resetDone" class="center-screen"></app-spinner>
 
   <!-- Editor modal -->
   <clr-modal
