--- a/src/app/management/menu-editor/menu-editor.component.scss
+++ b/src/app/management/menu-editor/menu-editor.component.scss
@@ -22,7 +22,7 @@
   display: block;
   position: sticky;
   top: -24px;
-  background: #fafafaef;
+  background: rgba(250, 250, 250, 0.94);
   margin: {
     top: -24px;
   }
