--- a/src/app/weekly-view/weekly-view.component.html
+++ b/src/app/weekly-view/weekly-view.component.html
@@ -1,1 +1,3 @@
-<app-header-toolbar label="Order reports"></app-header-toolbar>
+<app-day-column *ngFor="let date of dates" [date]="date">
+  <span>some content comes here</span>
+</app-day-column>
