--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,3 +1,5 @@
+$btn-border-radius: 3px;
+
 .content-container .content-area {
   position: relative;
   padding: 0;
@@ -21,4 +23,30 @@
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+}
+
+
+.btn-stack {
+  .btn {
+    border-radius: 0;
+    border-bottom-width: 0;
+    &:active, &:focus {
+      outline: none;
+    }
+  }
+
+  .btn:first-child {
+    border-top: {
+      left-radius: $btn-border-radius;
+      right-radius: $btn-border-radius;
+    }
+  }
+
+  .btn:last-child {
+    border-bottom: {
+      left-radius: $btn-border-radius;
+      right-radius: $btn-border-radius;
+      width: 1px;
+    }
+  }
 }
