--- a/src/app/container/dashboard/dashboard.component.html
+++ b/src/app/container/dashboard/dashboard.component.html
@@ -10,6 +10,9 @@
       <a routerLink="/orders" routerLinkActive="active" class="nav-link">
         Manage orders
       </a>
+      <a routerLink="/orders/weekly" routerLinkActive="active" class="nav-link">
+        Weekly view
+      </a>
     </section>
   </nav>
 </div>
