fix(weekly): show ordered items

--- a/src/app/weekly-view/day-column/day-column.component.html
+++ b/src/app/weekly-view/day-column/day-column.component.html
@@ -18,6 +18,7 @@
         *ngFor="let group of groups"
         [label]="group.tag"
         [dishes]="group.value"
+        [selectedId]="orderedItems.get(group.key)"
       >
        </app-dish-group>
     </ng-container>
